--- a/main.css
+++ b/main.css
@@ -143,6 +143,7 @@ h1 {
 
 .contact-info {
     padding: 0 15px;
+    padding-bottom: 15px;
     border-bottom: 2px solid #eeeeee;
 }
 
@@ -157,4 +158,69 @@ h1 {
 
 a.discrete-links {
     color: black;
+}
+
+.fa {
+    margin: 0px 2px;
+    padding: 10px;
+    font-size: 30px;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    text-decoration: none !important;
+    border-radius: 4px;
+}
+
+.fa-github {
+    background: black;
+    color: white;
+}
+
+.fa:hover {
+    color: white;
+    opacity: 0.5;
+}
+
+.fa-linkedin {
+    background: #007bb5;
+    color: white;
+}
+
+.fa-facebook {
+    background: #3b5998;
+    color: white;
+}
+
+.fa-soundcloud {
+    width: 60px;
+    background: #ff5500;
+    color: white;
+}
+
+.fa-youtube {
+    background: #bb0000;
+    color: white;
+}
+
+.fa-snapchat-ghost {
+    background: #fffb00;
+    color: white;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    border: 1px solid #dedede;
+}
+
+.fa-instagram {
+    width: 55px;
+    background: #125688;
+    color: white;
+}
+
+.fa-skype {
+    background: #00aff0;
+    color: white;
+}
+
+.fa-reddit {
+    background: #ff5700;
+    color: white;
 }
