--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,3 @@
-/* TODO: move all properties to one-line blocks */
-
 body {
     font-family: 'Encode Sans', sans-serif;
     font-weight: 500;
@@ -53,6 +51,8 @@ h1 {
     background-color: #fafafa;
 }
 
+/* TODO: https://medium.com/@mezoistvan/finally-a-css-only-solution-to-hover-on-touchscreens-c498af39c31c */
+/*       https://stackoverflow.com/questions/22559756/changing-hover-to-touch-click-for-mobile-devices    */
 .overlay-box {
     position: relative;
 }
