--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+/* Validated by https://jigsaw.w3.org/css-validator/ */
+
+/* TODO: use https://www.cleancss.com/css-beautify/
+         use http://csslint.net/ */
 body {
     font-family: 'Encode Sans', sans-serif;
     font-weight: 500;
