--- a/css/main.css
+++ b/css/main.css
@@ -207,3 +207,8 @@ a.discrete-links {
     background: #bb0000;
     color: white;
 }
+
+#name_header {
+    color: black;
+    text-decoration: none;
+}
