Resume Consolidation Updates (#69)
* Adding headshot photos

* Added YLLCO info, main HTML page needs cleanup

* High school information

* Community service, CMU GPA needs updates

* Graphite Audio Circuit project

* WHHS information

* 15-112 project

* High School Activities added

* Updated course list

* Added RA info

* DS Director/code updates

* Added 18-240 Lab 3B

* Added Pre-College Counselor

* Reorganized Skills

* Small research updates

* Small research updates (hybrid instrument)

* Music Tech Final Project updates

* ECE Capstone update

* RA update

* Smaller updates (Save work)

* Adding Orchestration Final Project

* Cleaning up iRobot details

* Adding CSM/CSPO badges

* DSPC work updates

* Fixing IDs to non-space characters

* Removing extra images for now

* Adding the headshots back in

* Moved DS page to Issue #21

* Moved rentwell.html to issue #70

* Last reordering, it's final now!

--- a/css/main.css
+++ b/css/main.css
@@ -113,10 +113,6 @@ h1 {
     font-size: 18px;
 }
 
-.timeframe {
-    padding-left: 0;
-}
-
 .homeimg img {
     margin: auto;
 }
@@ -263,4 +259,8 @@ a.discrete-links {
 
 .thin-headers {
     margin-top: 5px;
+}
+
+.top-row .fake-list {
+    margin-bottom: 10px;
 }
